# PDFScraper

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
PDFScraper/: __init__.py  __main__.py  batchProcessing.py  cli.py  core.py  dataStructure.py  main.py  outputGenerator.py  pdfParser.py
pdfExtractor/: batchProcessing.py  dataStructure.py  main.py  outputGenerator.py  pdfParser.py
